src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}

:root {
  --c-pri: #2c52bb;
  --c-pri-light: #376af7;
  --c-pri-dark: #1f3675;
  --c-sec: #efe7bc;
  --c-acc: #bb2c62;
}
.flex {
  display: flex;
  gap: 10px;
}
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.col {
  flex-direction: column;
}
.pri {
  color: var(--c-pri);
}
.pri-light {
  color: var(--c-pri-light);
}
button {
  padding: 8px 20px;
  cursor: pointer;
  background: var(--c-sec);
  border: none;
  color: #000;
  border-radius: 5px;
}
.cancel {
  background: none;
  border: 1px solid var(--c-pri);
}
.download {
  background: green;
  width: 100%;
}
.rounded {
  border-radius: 25px;
}
.cta {
  background: var(--c-acc);
  color: #fff;
}
.overlay {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.541);
}

